# robot_ws

./: LICENSE  README.md  house.data
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/description/share/description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/description/share/description/cmake/: descriptionConfig-version.cmake  descriptionConfig.cmake
log/: latest_build
src/description/: CMakeLists.txt  package.xml
src/description/config/: controllers.yaml  simulation.rviz  view_bot.rviz
src/description/launch/: abstract.launch.py  rsp.launch.py  sim.launch.py
src/description/urdf/: camera.urdf.xacro  depth_camera.urdf.xacro  gazebo_control.xacro  joints.urdf.xacro  lidar.urdf.xacro  links.urdf.xacro  materials.urdf.xacro  robot.urdf.xacro  ros2_control.xacro
src/diff_bot/: CMakeLists.txt  package.xml
src/diff_bot/config/: controllers.yaml  display_bot.rviz  mapper_params_online_async.yaml  sim.rviz
src/diff_bot/launch/: display_robot.launch.py  gazebo.launch.py  gazebo_sim.launch.py  ros2_control_sim.launch.py  rsp.launch.py  rviz.launch.py  sim.launch.py  slam.launch.py  view_bot.launch.py
src/diff_bot/map/: house.data
src/diff_bot/meshes/: Lidar.stl  Wheel.stl
src/diff_bot/urdf/: diff_control.gazebo.xacro  gazebo_control.xacro  gazebo_sensors.xacro  gazebo_sim.xacro  inertia_macros.xacro  joints.urdf.xacro  lidar.gazebo.xacro  links.urdf.xacro  materials.xacro  robot.urdf.xacro  ros2_control.xacro  ros2_control_sim.xacro
src/diff_bot/world/: house.world
(+25 files in other folders)
